button, color and chart updates

--- a/YazStaj/YazStaj/YazStaj.csproj
+++ b/YazStaj/YazStaj/YazStaj.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -79,6 +80,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\rsz_exitbutton.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\rsz_exitbuttonmat.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\rsz_minimizeback.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\rsz_minimizebackmat.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
