--- a/YazStaj/YazStaj/YazStaj.csproj
+++ b/YazStaj/YazStaj/YazStaj.csproj
@@ -95,6 +95,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\exitbutton.png" />
+    <Content Include="Resources\fluke.png" />
     <Content Include="Resources\lineBack2.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
